--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </button>
             <ul class="nav-ul" id="nav-ul">
                 <li><a href="#" class="active">Home</a></li>
-                <li><a href="#">Work</a></li>
+                <li><a href="<a href="https://leekira.github.io/UX_UI_HW_20/">Work</a></li>
                 <li><a href="About Me.html">About Me</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
