remove hyperlink line

--- a/CarBar.html
+++ b/CarBar.html
@@ -19,16 +19,16 @@
     <section>
         <nav>
             <!--logo-->
-            <a href ="#" class="logo"> LeeKira Smith </a>
+            <a href ="C:\Users\leeki\OneDrive\Documents\GitHub\UX_UI_HW_19\index.html" class="logo"> LeeKira Smith </a>
 
 <!--menu-->
         <button class="hamburger" id="hamburger">
             <i class="fas fa-bars"></i>
         </button>
             <ul class="nav-ul" id="nav-ul">
-                <li><a href=" https://leekira.github.io/UX_UI_HW_19/" class="active">Home</a></li>
-                <li><a href="#">Work</a></li>
-                <li><a href="#">About Me</a></li>
+                <li><a href="https://leekira.github.io/UX_UI_HW_19/">Home</a></li>
+                <li><a href="https://leekira.github.io/UX_UI_HW_20/">Work</a></li>
+                <li><a href="About Me.html">About Me</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
