--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <ul class="nav-ul" id="nav-ul">
                 <li><a href="https://leekira.github.io/UX_UI_HW_19/">Home</a></li>
                 <li><a href="https://leekira.github.io/UX_UI_HW_20/">Work</a></li>
-                <li><a href="https://leekira.github.io/UX_UI_HW_19/About%20Me.html">About Me</a></li>
+                <li><a href="About Me.html">About Me</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
