--- a/About Me.html
+++ b/About Me.html
@@ -5,7 +5,7 @@
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>About Me</title>
-     <link rel="stylesheet" type="text/css" href="css/About Me.css">
+     <link rel="stylesheet" type="text/css" href="/About Me.css">
         <!--Font Style-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
